fixed gap in dropdown menu

--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ li.dropdown:hover ul {
 	width: 110px;
 	position: absolute; 
 	background: #fff;
-	padding: 50px 0 10px 20px;
+	padding: 5px 0 10px 20px;
 	border: 1px #ebebeb solid;
 	border-radius: 6px;
 	-moz-border-radius: 6px;
